manifest/gateways/gateway-hydra-demo.yaml
# For Rewrite issues
# https://github.com/istio/istio/issues/8076
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-hydra
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 9000
      name: http
      protocol: HTTP
    hosts:
    - "*"   # Domain name of the external website
---
# All traffic routed to the fleetman-webapp service
# No DestinationRule needed as we aren't doing any subsets, load balancing or outlier detection.
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: hydra-service-rule
  namespace: default
spec:
  hosts:      # which incoming host are we applying the proxy rules to???
    - "*"
  gateways:
    - ingress-hydra
  http:
  - match: 
    - uri:
        prefix: /issuer/
    - uri:
        prefix: /issuer
    rewrite:
      uri: "/"
    headers:
      response:
        remove:
          - "x-envoy-upstream-service-time"
          - "server"
    route:
    - destination:
        port:
          number: 9000
        host: hydra-service.default.svc.cluster.local

  - match: 
    - uri:
        prefix: /admin/
    - uri:
        prefix: /admin
    rewrite:
      uri: "/"
    headers:
      response:
        remove:
          - "x-envoy-upstream-service-time"
          - "server"
    route:
    - destination:
        port:
          number: 9001
        host: hydra-service.default.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: server-name-tweaks
  namespace: istio-system
spec:
  configPatches:
  - applyTo: NETWORK_FILTER # http connection manager is a filter in Envoy
    match:
      listener:
        filterChain:
          filter:
            name: "envoy.http_connection_manager"
    patch:
      operation: MERGE
      value:
        config:
          server_name: "_"
