manifest/gateways/gateway-oauth.yaml
# For Rewrite issues
# https://github.com/istio/istio/issues/8076
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-oauth-front
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 9020
      name: http
      protocol: HTTP
    hosts:
    - "*"   # Domain name of the external website
---
# All traffic routed to the fleetman-webapp service
# No DestinationRule needed as we aren't doing any subsets, load balancing or outlier detection.
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: oauth-front-service-rule
  namespace: default
spec:
  hosts:      # which incoming host are we applying the proxy rules to???
    - "*"
  gateways:
    - ingress-oauth-front
  http:
  - match: 
    - uri:
        prefix: /
    headers:
      response:
        remove:
          - "x-envoy-upstream-service-time"
          - "server"
    route:
    - destination:
        port:
          number: 3000
        host: oauth-front-service.default.svc.cluster.local
